--- a/karaf-system/system.core/core.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.core/core.features/src/main/resources/template/features.xml
@@ -163,7 +163,7 @@
         <feature>patlego-vm-gson</feature>
         <feature>patlego-vm-ioutils</feature>
         <bundle>mvn:io.github.vm.patlego.iot.server/server.dao/${iot.version}</bundle>
-        <!-- <bundle>mvn:io.github.vm.patlego.iot.server/server.core/${iot.version}</bundle>
-        <bundle>mvn:io.github.vm.patlego.iot.server/server.web/${iot.version}</bundle> -->
+        <bundle>mvn:io.github.vm.patlego.iot.server/server.core/${iot.version}</bundle>
+        <bundle>mvn:io.github.vm.patlego.iot.server/server.web/${iot.version}</bundle>
     </feature>
 </features>
