--- a/karaf-system/system.core/core.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.core/core.features/src/main/resources/template/features.xml
@@ -19,7 +19,7 @@
 <features name="io.github.vm.patlego-{project.version}" xmlns="http://karaf.apache.org/xmlns/features/v1.3.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://karaf.apache.org/xmlns/features/v1.3.0 http://karaf.apache.org/xmlns/features/v1.3.0">
 
     <repository>mvn:org.apache.karaf.features/spring-legacy/4.3.1/xml/features</repository>
-    <repository>mvn:org.apache.activemq/activemq-karaf/[5.14,6)/xml/features</repository> 
+    <repository>mvn:org.apache.activemq/activemq-karaf/[5.14,6)/xml/features</repository>
 
     <feature name="patlego-vm" version="${project.version}">
         <feature>patlego-vm-ioutils</feature>
@@ -169,9 +169,10 @@
     </feature>
 
     <feature name="patlego-vm-jsonpath" version="${jsonpath.version}">
-        <bundle>mvn:com.jayway.jsonpath/json-path/${jsonpath.version}</bundle>
+        <bundle>mvn:io.github.vm.patlego/jsonpath.wrapper/${jsonpath.version}</bundle>
+        <!-- <bundle>mvn:com.jayway.jsonpath/json-path/2.5.0</bundle>
         <bundle>mvn:net.minidev/json-smart/2.4.7</bundle>
         <bundle>mvn:net.minidev/accessors-smart/2.4.7</bundle>
-        <bundle>mvn:org.ow2.asm/asm/8.0</bundle>
+        <bundle>mvn:org.ow2.asm/asm/8.0</bundle> -->
     </feature>
 </features>
