--- a/karaf-system/system.core/core.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.core/core.features/src/main/resources/template/features.xml
@@ -169,10 +169,6 @@
     </feature>
 
     <feature name="patlego-vm-jsonpath" version="${jsonpath.version}">
-        <bundle>mvn:io.github.vm.patlego/jsonpath.wrapper/${jsonpath.version}</bundle>
-        <!-- <bundle>mvn:com.jayway.jsonpath/json-path/2.5.0</bundle>
-        <bundle>mvn:net.minidev/json-smart/2.4.7</bundle>
-        <bundle>mvn:net.minidev/accessors-smart/2.4.7</bundle>
-        <bundle>mvn:org.ow2.asm/asm/8.0</bundle> -->
+        <bundle>mvn:io.github.vm.patlego/jsonpath.wrapper/${project.version}</bundle>
     </feature>
 </features>
