--- a/karaf-system/system.core/core.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.core/core.features/src/main/resources/template/features.xml
@@ -34,8 +34,8 @@
         <feature>patlego-vm-aws</feature>
         <feature>patlego-vm-html</feature>
         <feature>patlego-vm-html-samples</feature>
-        <feature>patlego-vm-jms-activemq</feature>
-        <feature>patlego-vm-jms-connectionfactory</feature>
+        <!-- <feature>patlego-vm-jms-activemq</feature>
+        <feature>patlego-vm-jms-connectionfactory</feature> -->
         <feature>patlego-vm-sms</feature>
         <feature>patlego-vm-iot</feature>
     </feature>
